# MCPHub-Desktop

./: .gitignore  .gitmodules  DOC_STRUCTURE.md  FINAL_DOC_STRUCTURE.md  README.md  agent.md  package-lock.json  package.json
doc/: CONFIGURATION_COMPLETE.md  CONFIGURATION_FINAL.md  DOC_STRUCTURE.md  FINAL_DOC_STRUCTURE.md  FINAL_SUMMARY.md  FIXES_SUMMARY.md  GENERATE_KEYS.md  NEXT_STEPS.md  OPENSOURCE_QUICK_START.md  README.md  RELEASE_WORKFLOW.md  RELEASE_YML_IMPROVEMENTS.md  SETUP_UPDATER.md  SIGNING_SETUP.md  UPDATER_CONFIGURED.md  UPDATER_README_UPDATED.md  VERSION_CONFIG.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
locales/: en.json  en.json.backup  fr.json  fr.json.backup  tr.json  zh.json  zh.json.backup
scripts/: download-runtimes.ps1  download-runtimes.sh  generate-signing-key.sh  (+4 more)
src-tauri/: .tool-versions  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.codegraph/: daemon.pid
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_schema_fix.sql  0003_config_json.sql  0004_default_admin.sql  0005_default_skip_auth.sql  0006_openapi_column.sql  0007_activity_source_ip.sql  0008_per_session_client.sql
src-tauri/runtimes/: .gitignore
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/commands/: auth.rs  bearer_keys.rs  cloud.rs  config.rs  cost.rs  groups.rs  http_server.rs  logs.rs  market.rs  mod.rs  prompts.rs  registry.rs  resources.rs  runtime.rs  server_tool_config.rs  servers.rs  tools.rs  users.rs
src-tauri/src/db/: migration.rs  mod.rs
src-tauri/src/mcp/: client.rs  http_transport.rs  mod.rs  openapi_transport.rs  pool.rs  progress.rs  session_pool.rs  sse_transport.rs  stdio_transport.rs
src-tauri/src/models/: auth.rs  bearer_key.rs  config.rs  group.rs  log.rs  market.rs  mod.rs  prompt.rs  resource.rs  server.rs  server_tool_config.rs  user.rs
src-tauri/src/services/: app_logger.rs  bearer_key_service.rs  config_service.rs  group_service.rs  http_server.rs  log_service.rs  market_service.rs  mcp_manager.rs  mod.rs  prompt_service.rs  resource_service.rs  runtime_env.rs  server_service.rs  server_tool_config_service.rs  settings_import.rs  user_service.rs
src-tauri/updater/: README.md  latest.json  mcphub.key  mcphub.key.pub
(+131 files in other folders)
